--- a/templates/login.html
+++ b/templates/login.html
@@ -11,8 +11,8 @@
              </div>
         {% endif %}
         {% endwith %}
-<form method="POST" action="/login">
-        <form method="POST" action="/login">
+<form method="POST" action="/">
+        <form method="POST" action="/">
             <div class="field">
                 <div class="control">
                     <input class="input is-large" name="User" placeholder="Usuário" autofocus="">
