--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,9 @@
                 <div class="container">
                     <div id="navbarMenuHeroA" class="navbar-menu">
                         <div class="navbar-end">
-
+                            <a href="{{ url_for('logout') }}" class="navbar-item">
+                                Logout
+                            </a>
                         </div>
                     </div>
                 </div>
