--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
+
 <h1 class="title">
-  Welcome, {{name}}!
+  Olá, {{name}}!
 </h1>
+<a href="{{url_for('add_guesses') }}"> Add</a>
 {% endblock %}
