--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
                 <div class="container">
                     <div id="navbarMenuHeroA" class="navbar-menu">
                         <div class="navbar-end">
+                            <a href="{{ url_for('profile_page') }}" class="navbar-item">
+                                Home
+                            </a>
                             <a href="{{ url_for('logout') }}" class="navbar-item">
                                 Logout
                             </a>
