Fixed the dictionary storing problem. The (very inelegant) solution was to save the dictionary directly to a pickle file, which is loaded on runtime. Added edit function.

--- a/templates/edit_main.html
+++ b/templates/edit_main.html
@@ -6,6 +6,6 @@
   EDITAR
 </h1>
 {% for guess in guesses_names %}
-<p>{{guess}}</p>
+<a href="{{ url_for('edit_guess', i=guess) }}">{{guess}}</a><br>
 {% endfor %}
 {% endblock %}
